@@ -593,7 +593,6 @@ RendererAgg::draw_markers(const Py::Tuple& args) {
     delete[] strokeCache;
 
   return Py::Object();
-
 }
 
 /**
@@ -1324,11 +1323,9 @@ RendererAgg::write_png(const Py::Tuple& args)
       throw Py::RuntimeError( Printf("Could not open file %s", file_name).str() );
   }
   else {
-    if ((fp = PyFile_AsFile(py_fileobj.ptr())) == NULL) {
-      PyObject* write_method = PyObject_GetAttrString(py_fileobj.ptr(), "write");
-      if (!(write_method && PyCallable_Check(write_method)))
-	throw Py::TypeError("Object does not appear to be a path or a Python file-like object");
-    }
+    PyObject* write_method = PyObject_GetAttrString(py_fileobj.ptr(), "write");
+    if (!(write_method && PyCallable_Check(write_method)))
+      throw Py::TypeError("Object does not appear to be a path or a Python file-like object");
   }
 
   png_bytep *row_pointers = NULL;
