@@ -1,3 +1,5 @@
+2007-12-06 fixed a bug in rcsetup, see bug 1845057 - DSD
+
 ===============================================================
 2007-11-27 Released 0.91.1 at revision 4517
 
